# opensim-core

OpenSim/Actuators/: DCMotor.cpp  DCMotor.h  RegisterTypes_osimActuators.cpp  osimActuators.h
OpenSim/Examples/Moco/: CMakeLists.txt
OpenSim/Examples/Moco/example2DJumpingLinkage/: 2D_linkage_leg.osim  CMakeLists.txt  example2DJumpingLinkage.cpp
OpenSim/Examples/Moco/example2DWalking/: example2DWalking.cpp
OpenSim/Examples/Moco/example2DWalkingLinkage/: 2D_gait_linkage.osim  CMakeLists.txt  example2DWalkingLinkage.cpp
OpenSim/Examples/Moco/exampleCustomImplicitAuxiliaryDynamics/: exampleCustomImplicitAuxiliaryDynamics.cpp
OpenSim/Examples/Moco/exampleHangingMuscle/: exampleHangingMuscle.cpp
OpenSim/Examples/Moco/exampleMarkerTracking/: exampleMarkerTracking.cpp
OpenSim/Moco/: CMakeLists.txt  MocoDirectCollocationSolver.cpp  MocoDirectCollocationSolver.h  MocoInverse.cpp  MocoParameter.cpp  MocoParameter.h  MocoProblem.cpp  MocoProblem.h  MocoProblemRep.cpp  MocoProblemRep.h  MocoSolver.cpp  MocoStudyFactory.cpp  MocoTool.cpp  MocoTool.h  MocoTrack.cpp  MocoTrack.h  MocoUtilities.cpp  MocoUtilities.h  MocoVariableInfo.cpp  MocoVariableInfo.h  RegisterTypes_osimMoco.cpp  osimMoco.h
OpenSim/Moco/MocoCasADiSolver/: CasOCProblem.h  CasOCSolver.h  CasOCTranscription.cpp  CasOCTranscription.h  MocoCasADiSolver.cpp  MocoCasADiSolver.h  MocoCasOCProblem.cpp
OpenSim/Moco/MocoGoal/: MocoControlGoal.cpp  MocoControlGoal.h  MocoEnergyGoal.cpp  MocoEnergyGoal.h  MocoGoal.h
OpenSim/Moco/tropter/: TropterProblem.h
doc/Moco/: MocoCheatSheet.tex
(+4 files in other folders)
